# seoul-hardware-hackerton

./: README.md
RFID/Cart RFID/: main.c
RFID/Counter RFID/: main.c
jetson_nano/GUI/: main.c
jetson_nano/lidar/follower/follower/: CMakeLists.txt  package.xml
jetson_nano/lidar/follower/follower/nodes/: follower
jetson_nano/lidar/ydlidar/ydlidar_ros/: lidarrviz.rviz
jetson_nano/lidar/ydlidar/ydlidar_ros/launch/: X4.launch
jetson_nano/motor/: second_try_motor.ino
server/.metadata/: version.ini
server/AWS/: dbwjd.pem  dbwjd.ppk  helloworld.js  서버관련.txt
server/tak_server/: TaCar.txt  Tacar_UserPage.txt
